specs/014-string-methods/examples/valid/query-methods.ts
const s: string = "Hello, World";
console.log(s.charAt(1));
console.log(s.charCodeAt(0));
console.log(s.indexOf("World"));
console.log(s.indexOf("xyz"));
console.log(s.includes("World"));
console.log(s.includes("zzz"));
console.log(s.startsWith("Hello"));
console.log(s.endsWith("World"));
