specs/014-string-methods/examples/invalid/charat-arg-type.ts
const s: string = "hello";
// charAt expects an integer index, not a string.
console.log(s.charAt("x"));
